--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,7 +13,8 @@
   "content_scripts": [
     {
       "matches": ["*://mycourses2.mcgill.ca/d2l/lms/dropbox*"],
-      "js": ["js/init.js", "js/addToCalendar.js"]
+      "js": ["js/init.js",  "js/ouical.js", "js/addToCalendar.js"],
+      "css": ["css/button.css"]
     }
   ]
 }
