--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,17 +3,20 @@
 
   "name": "MyCourses Extension",
   "description": "This extension helps users manage their myCourses assignments.",
-  "version": "0.1.0",
-
+  "version": "0.1.1",
   "browser_action": {
-
   },
   "permissions":[
   ],
   "content_scripts": [
     {
-      "matches": ["*://mycourses2.mcgill.ca/d2l/lms/dropbox*"],
-      "js": ["js/init.js",  "js/ouical.js", "js/addToCalendar.js"],
+      "matches": ["*://*.mcgill.ca/*"],
+      "js": [
+        "js/init.js",
+        "js/ouical.js", 
+        "js/addToCalendar.js"
+        
+      ],
       "css": ["css/button.css"]
     }
   ]
