--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,10 +12,10 @@
     {
       "matches": ["*://*.mcgill.ca/*"],
       "js": [
-        "js/init.js",
+        "js/calendarShortcut.js",
         "js/ouical.js", 
-        "js/addToCalendar.js"
-        
+        "js/addToCalendar.js",
+        "js/init.js"
       ],
       "css": ["css/button.css"]
     }
