--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,8 +15,8 @@
         "js/calendarShortcut.js",
         "js/ouical.js", 
         "js/addToCalendar.js",
-        "js/init.js",
-        "js/gradeCalc.js"
+        "js/calendarDropdown.js",
+        "js/init.js"
       ],
       "css": ["css/button.css"]
     }
