added options page and option for calender toggle

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -6,7 +6,13 @@
   "version": "0.1.1",
   "browser_action": {
   },
+  "options_ui":{
+    "page": "options.html",
+    "chrome_style":true,
+    "open_in_tab":true
+  },
   "permissions":[
+    "storage"
   ],
   "content_scripts": [
     {
